--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.4.3",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.7.0",
+    "@mui/styles": "^5.7.0",
+    "@mui/icons-material": "^5.2.5",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,6 +23,7 @@
     "react-dom": "^18.1.0",
     "sass": "^1.51.0",
     "stream-browserify": "^3.0.0",
+    "typescript": "^4.6.4",
     "util": "^0.12.4",
     "web-vitals": "^2.1.4",
     "web3": "^1.7.3"
