--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
     "bootstrap": "^5.1.3",
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
+    "dotenv": "^16.0.1",
+    "ganache-cli": "^6.12.2",
     "node-sass": "^7.0.1",
     "process": "^0.11.10",
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.1.0",
     "sass": "^1.51.0",
+    "save": "^2.5.0",
     "stream-browserify": "^3.0.0",
+    "truffle-hdwallet-provider": "^1.0.17",
     "typescript": "^4.6.4",
     "util": "^0.12.4",
     "web-vitals": "^2.1.4",
