--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "todolist",
   "version": "0.1.0",
   "private": true,
+    "engines": {
+    "node": "16.x"
+  },
   "dependencies": {
     "@craco/craco": "^6.4.3",
     "@emotion/react": "^11.9.0",
